--- a/.github/workflows/infinity-free.yml
+++ b/.github/workflows/infinity-free.yml
@@ -22,8 +22,8 @@ jobs:
         uses: SamKirkland/FTP-Deploy-Action@v4.3.5
         with:
           server: ftpupload.net
-          username: ${{ secrets.IF0_40508622 }}
-          password: ${{ secrets.secretnirvana }}
+          username: ${{ secrets.FTP_USERNAME }}
+          password: ${{ secrets.FTP_PASSWORD }}
           server-dir: /nirvanabank.kesug.com/htdocs/  # For addon domains
           timeout: 86400000
           log-level: standard
